css/styles.css
:root {
  --font-family-crimson-pro-regular: "Crimson Pro", serif;
  --font-family-crimson-pro-black: "Crimson Pro Black", serif;
  --font-family-fascinate: "Fascinate", system-ui;
  --primary-color: #8fb6c2;
  --secondary-color: #06270b;
  --tertiary-color: #833f00;
  /* --quaternary-color: #f7f7f7; -> TODO: light orange */
  --light-base: #cfcfcf;
  --dark-base: #262626;
}

/* Resetting margins and paddings */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Tipography */
body {
  font-family: var(--font-family-crimson-pro-regular);
}

/* HEADER */
header {
  background: var(--primary-color);
  padding: 10px 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* Logo - TODO: create css class to specify h1 better */
h1 {
  font-family: var(--font-family-fascinate);
  font-size: 3em;
  color: var(--secondary-color);
}

h1 a {
  text-decoration: none;
  color: var(--secondary-color);
}

h1 a:hover {
  font-style: italic;
}

/* Navigation Menu */
header nav ul {
  font-size: 2em;
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: auto;
  gap: 1em;
  /* TODO: why everything moves on hover? */
}

header nav ul li a {
  color: var(--secondary-color);
  text-decoration: none;
}

header nav ul li a:hover {
  font-weight: 600;
}
/* END OF HEADER */

/* Main Content Styles */
main {
  padding: 20px;
  background-color: var(--light-base);
  height: 100%;
}

h2 {
  color: var(--dark-base);
}

/* About Section */
.about {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: auto;
  gap: 2em;
  align-items: start;
}

.profile-pic {
  width: 100%;
  margin: 10px 0 0 10px;
  grid-row: 1 / 2;
  border-radius: 13%;
  box-shadow: -10px -10px 0 0 var(--dark-base);
}

.about-text {
  width: 100%;
  padding: 20px;
  font-size: 1.3em;
  line-height: 1.5;
  grid-row: 1 / 2;
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.about-skills {
  width: 100%;
  grid-column: 1 / span 2;
  padding: 20px;
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.about-skills ul {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
}

.about-skills ul li {
  font-size: 2em;
  /* background: var(--secondary-color); */
  color: var(--dark-base);
  padding: 5px 10px;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  gap: 5px;
  align-items: center;
  border: 1px solid var(--secondary-color);
}
/* End of About Section */

/* Projects Section */
.projects {
  padding: 20px;
}
/* End of Projects Section */

footer {
  background: var(--primary-color);
  color: var(--dark-base);
  text-align: center;
  padding: 10px;
  position: end;
  bottom: 0;
  width: 100%;
}

/* section#section-404 {
  text-align: center;
  margin-top: 100px;
}
h2.page-404 {
  font-family: var(--font-family-crimson-pro-black);
  font-size: 5em;
}

p.page-404 {
  font-family: var(--font-family-crimson-pro-regular);
  font-size: 1.2em;
} */

/* Responsive design adjustments */
/* Responsive Images */
/* img {
  max-width: 50%;
  height: auto;
} */

/* Responsive Navigation Menu */
@media (max-width: 768px) {
  nav ul {
    flex-direction: column;
    text-align: center;
  }

  header {
    text-align: center;
  }
}

